# fast_api

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
